--- a/app/src/main/res/layout/activity_secondary.xml
+++ b/app/src/main/res/layout/activity_secondary.xml
@@ -272,7 +272,7 @@
                     android:layout_width="100dp"
                     android:layout_height="30dp"
                     android:gravity="center"
-                    android:text="IPS"
+                    android:text="Kimia"
                     android:textColor="@color/black"
                     android:textStyle="normal" />
             </LinearLayout>
@@ -331,7 +331,7 @@
                     android:gravity="center">
 
                     <ImageView
-                        android:id="@+id/fisika"
+                        android:id="@+id/ekonomi"
                         android:layout_width="77dp"
                         android:layout_height="77dp"
                         android:layout_marginTop="25dp"
@@ -341,22 +341,22 @@
                         app:layout_constraintTop_toTopOf="parent" />
 
                     <ImageView
-                        android:id="@+id/icon_fisika"
+                        android:id="@+id/icon_ekonomi"
                         android:layout_width="50dp"
                         android:layout_height="50dp"
-                        android:src="@drawable/fisika"
+                        android:src="@drawable/ekonomi"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintHorizontal_bias="0.498"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="@+id/fisika" />
+                        app:layout_constraintTop_toTopOf="@+id/ekonomi" />
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
                 <TextView
                     android:layout_width="100dp"
                     android:layout_height="35dp"
                     android:gravity="center"
-                    android:text="Fisika"
+                    android:text="Ekonomi"
                     android:textColor="@color/black"
                     android:textStyle="normal" />
             </LinearLayout>
@@ -373,7 +373,7 @@
                     android:gravity="center">
 
                     <ImageView
-                        android:id="@+id/eng"
+                        android:id="@+id/sejarah"
                         android:layout_width="77dp"
                         android:layout_height="77dp"
                         android:layout_marginTop="20dp"
@@ -383,21 +383,21 @@
                         app:layout_constraintTop_toTopOf="parent" />
 
                     <ImageView
-                        android:id="@+id/icon_eng"
+                        android:id="@+id/icon_sejarah"
                         android:layout_width="50dp"
                         android:layout_height="50dp"
-                        android:src="@drawable/eng"
-                        app:layout_constraintBottom_toBottomOf="@+id/eng"
+                        android:src="@drawable/sejarah"
+                        app:layout_constraintBottom_toBottomOf="@+id/sejarah"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="@+id/eng" />
+                        app:layout_constraintTop_toTopOf="@+id/sejarah" />
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
                 <TextView
                     android:layout_width="100dp"
                     android:layout_height="wrap_content"
                     android:gravity="center"
-                    android:text="Bahasa \n Inggris"
+                    android:text="Sejarah"
                     android:textColor="@color/black"
                     android:textStyle="normal" />
 
@@ -409,33 +409,35 @@
                     app:layout_constraintStart_toStartOf="parent">
 
                     <ImageView
-                        android:id="@+id/biologi"
+                        android:id="@+id/pkn"
                         android:layout_width="77dp"
                         android:layout_height="77dp"
-                        android:layout_marginTop="25dp"
+                        android:layout_marginTop="40dp"
                         android:src="@drawable/lingkaran_grade"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
 
                     <ImageView
-                        android:id="@+id/icon_biologi"
+                        android:id="@+id/icon_pkn"
                         android:layout_width="50dp"
                         android:layout_height="50dp"
-                        android:src="@drawable/biologi"
-                        app:layout_constraintBottom_toBottomOf="@+id/biologi"
+                        android:src="@drawable/eagle"
+                        app:layout_constraintBottom_toBottomOf="@+id/pkn"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="@+id/biologi" />
+                        app:layout_constraintTop_toTopOf="@+id/pkn" />
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
                 <TextView
                     android:layout_width="100dp"
                     android:layout_height="30dp"
                     android:gravity="center"
-                    android:text="Biologi"
+                    android:text="PKN"
                     android:textColor="@color/black"
-                    android:textStyle="normal" />
+                    android:textStyle="normal"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent" />
             </LinearLayout>
 
             <LinearLayout
@@ -450,7 +452,7 @@
                     android:gravity="center">
 
                     <ImageView
-                        android:id="@+id/b_ind"
+                        android:id="@+id/sosiologi"
                         android:layout_width="77dp"
                         android:layout_height="77dp"
                         android:layout_marginTop="20dp"
@@ -460,15 +462,15 @@
                         app:layout_constraintTop_toTopOf="parent" />
 
                     <ImageView
-                        android:id="@+id/icon_b_ind"
+                        android:id="@+id/icon_sosiologi"
                         android:layout_width="50dp"
                         android:layout_height="50dp"
-                        android:src="@drawable/book_2"
-                        app:layout_constraintBottom_toBottomOf="@+id/b_ind"
-                        app:layout_constraintEnd_toEndOf="@+id/b_ind"
+                        android:src="@drawable/sosiologi"
+                        app:layout_constraintBottom_toBottomOf="@+id/sosiologi"
+                        app:layout_constraintEnd_toEndOf="@+id/sosiologi"
                         app:layout_constraintHorizontal_bias="0.657"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="@+id/b_ind"
+                        app:layout_constraintTop_toTopOf="@+id/sosiologi"
                         app:layout_constraintVertical_bias="0.407" />
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -476,7 +478,7 @@
                     android:layout_width="100dp"
                     android:layout_height="35dp"
                     android:gravity="center"
-                    android:text="Bahasa \nIndonesia"
+                    android:text="sosiologi"
                     android:textColor="@color/black"
                     android:textStyle="normal" />
 
@@ -486,7 +488,7 @@
                     android:gravity="center">
 
                     <ImageView
-                        android:id="@+id/kimia"
+                        android:id="@+id/lintas_minat"
                         android:layout_width="77dp"
                         android:layout_height="77dp"
                         android:layout_marginTop="25dp"
@@ -496,21 +498,21 @@
                         app:layout_constraintTop_toTopOf="parent" />
 
                     <ImageView
-                        android:id="@+id/icon_kimia"
+                        android:id="@+id/icon_lintas_minat"
                         android:layout_width="50dp"
                         android:layout_height="50dp"
-                        android:src="@drawable/kimia"
-                        app:layout_constraintBottom_toBottomOf="@+id/kimia"
+                        android:src="@drawable/lintas_minat"
+                        app:layout_constraintBottom_toBottomOf="@+id/lintas_minat"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="@+id/kimia" />
+                        app:layout_constraintTop_toTopOf="@+id/lintas_minat" />
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
                 <TextView
                     android:layout_width="100dp"
                     android:layout_height="30dp"
                     android:gravity="center"
-                    android:text="IPS"
+                    android:text="Lintas \n Minat"
                     android:textColor="@color/black"
                     android:textStyle="normal" />
             </LinearLayout>
