--- a/app/src/main/res/layout/activity_first_screen_pintar_plus.xml
+++ b/app/src/main/res/layout/activity_first_screen_pintar_plus.xml
@@ -19,7 +19,7 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.133">
+        app:layout_constraintVertical_bias="0.5">
 
         <ImageView
             android:layout_width="200dp"
@@ -30,18 +30,25 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="10dp"
             android:gravity="center"
             android:text="Pintar+"
             android:textColor="@color/black"
             android:textSize="70sp"
             android:textStyle="bold" />
 
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    android:layout_gravity="center"
+    android:layout_marginTop="35dp">
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
             android:gravity="center"
+            android:layout_gravity="center"
             android:text="Welcome to the OnlineLearning App"
             android:textColor="@color/black"
             android:textSize="20sp"
@@ -68,6 +75,7 @@
             android:gravity="center"
             android:layout_gravity="center"
             android:layout_marginTop="40dp"/>
+    </LinearLayout>
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
