--- a/app/src/main/res/layout/activity_elementary.xml
+++ b/app/src/main/res/layout/activity_elementary.xml
@@ -69,6 +69,7 @@
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:src="@drawable/calculating"
+                android:padding="8dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.498"
