--- a/app/src/main/res/xml/network_security_config.xml
+++ b/app/src/main/res/xml/network_security_config.xml
@@ -4,6 +4,7 @@
         <domain includeSubdomains="true">10.0.2.2</domain>
         <domain includeSubdomains="true">192.168.238.162</domain>
         <domain includeSubdomains="true">172.31.96.1</domain>
+        <domain includeSubdomains="true">192.168.192.162</domain>
 <!--        <domain includeSubdomains="true">192.168.76.3</domain>-->
 <!--        <domain includeSubdomains="true">127.0.0.1</domain>-->
 <!--        <domain includeSubdomains="true">192.168.187.65</domain>-->
