ini tambah intent

--- a/app/src/main/res/layout/activity_secondary.xml
+++ b/app/src/main/res/layout/activity_secondary.xml
@@ -44,6 +44,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:gravity="center"
             android:layout_marginTop="10dp"
             android:orientation="horizontal">
 
@@ -282,6 +283,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:gravity="center"
             android:layout_marginTop="10dp"
             android:orientation="horizontal">
 
@@ -509,8 +511,8 @@
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
                 <TextView
-                    android:layout_width="100dp"
-                    android:layout_height="30dp"
+                    android:layout_width="110dp"
+                    android:layout_height="wrap_content"
                     android:gravity="center"
                     android:text="Lintas \n Minat"
                     android:textColor="@color/black"
