--- a/app/src/main/res/layout/activity_elementary.xml
+++ b/app/src/main/res/layout/activity_elementary.xml
@@ -42,6 +42,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
+    android:gravity="center"
     android:layout_marginTop="40dp"
     android:orientation="horizontal">
 
