--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -129,7 +129,8 @@
                     android:shadowColor="@color/shadow"
                     android:text="LOG IN"
                     android:textColor="@color/black"
-                    android:textSize="13sp"></TextView>
+                    android:textSize="13sp">
+                </TextView>
             </LinearLayout>
 
             <LinearLayout
@@ -157,6 +158,7 @@
                     tools:layout_editor_absoluteY="70dp" />
 
                 <TextView
+                    android:id="@+id/btndaftar"
                     android:layout_width="90dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
