--- a/app/src/main/res/layout/activity_primary.xml
+++ b/app/src/main/res/layout/activity_primary.xml
@@ -39,11 +39,12 @@
             android:textColor="@color/white"
             android:textSize="24sp"
             android:textStyle="bold" />
-        <!--Bagian atas-->
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:gravity="center"
             android:layout_marginTop="10dp"
             android:orientation="horizontal">
 
@@ -281,6 +282,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_gravity="center"
+            android:gravity="center"
             android:orientation="vertical"
             android:padding="@dimen/lg"
             app:layout_constraintBottom_toBottomOf="parent"
