--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -135,7 +135,7 @@
                     app:cardCornerRadius="10dp" />
 
                 <TextView
-                    android:id="@+id/btnLogin"
+                    android:id="@+id/btnSignUp"
                     android:layout_width="200dp"
                     android:layout_height="40dp"
                     android:layout_gravity="center"
@@ -177,6 +177,7 @@
 
                 <TextView
                     android:layout_width="90dp"
+                    android:id="@+id/LoginSignUp"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
                     android:background="@color/transparent"
