--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -85,7 +85,7 @@
                     android:drawablePadding="@dimen/lg"
                     android:ems="10"
                     android:padding="@dimen/xlg"
-                    android:text="Number / Email"
+                    android:hint="Number / Email"
                     android:textColor="@color/black"
                     android:textSize="13sp" />
 
@@ -99,7 +99,7 @@
                     android:drawablePadding="@dimen/lg"
                     android:ems="10"
                     android:padding="@dimen/xlg"
-                    android:text="Email"
+                    android:hint="Email"
                     android:textColor="@color/black"
                     android:textSize="13sp"
                     app:cardCornerRadius="10dp" />
@@ -114,7 +114,7 @@
                     android:drawablePadding="@dimen/lg"
                     android:ems="10"
                     android:padding="@dimen/xlg"
-                    android:text="Password"
+                    android:hint="Password"
                     android:textColor="@color/black"
                     android:textSize="13sp"
                     app:cardCornerRadius="10dp" />
@@ -129,7 +129,7 @@
                     android:drawablePadding="@dimen/lg"
                     android:ems="10"
                     android:padding="@dimen/xlg"
-                    android:text="Re-password"
+                    android:hint="Re-password"
                     android:textColor="@color/black"
                     android:textSize="13sp"
                     app:cardCornerRadius="10dp" />
