--- a/app/src/main/res/layout/activity_elementary.xml
+++ b/app/src/main/res/layout/activity_elementary.xml
@@ -66,11 +66,9 @@
                 android:src="@drawable/lingkaran_grade"/>
 
             <ImageView
-                android:id="@+id/icon_mtk"
+                android:id="@+id/matpel_icon_1"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
-                android:src="@drawable/calculating"
-                android:padding="8dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.498"
@@ -100,10 +98,9 @@
                 android:src="@drawable/lingkaran_grade"/>
 
             <ImageView
-                android:id="@+id/icon_eng"
+                android:id="@+id/matpel_icon_4"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
-                android:src="@drawable/eng"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.498"
@@ -140,10 +137,9 @@
                     app:layout_constraintTop_toTopOf="parent" />
 
                 <ImageView
-                    android:id="@+id/icon_pkn"
+                    android:id="@+id/matpel_icon_2"
                     android:layout_width="50dp"
                     android:layout_height="50dp"
-                    android:src="@drawable/eagle"
                     app:layout_constraintBottom_toBottomOf="@+id/pkn"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -172,10 +168,9 @@
                     app:layout_constraintTop_toTopOf="parent" />
 
                 <ImageView
-                    android:id="@+id/icon_ipa"
+                    android:id="@+id/matpel_icon_5"
                     android:layout_width="50dp"
                     android:layout_height="50dp"
-                    android:src="@drawable/rafflesia"
                     app:layout_constraintBottom_toBottomOf="@+id/ipa"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -211,10 +206,9 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <ImageView
-                android:id="@+id/icon_b_ind"
+                android:id="@+id/matpel_icon_3"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
-                android:src="@drawable/book_2"
                 app:layout_constraintBottom_toBottomOf="@+id/b_ind"
                 app:layout_constraintEnd_toEndOf="@+id/b_ind"
                 app:layout_constraintHorizontal_bias="0.657"
@@ -245,10 +239,9 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <ImageView
-                android:id="@+id/icon_ips"
+                android:id="@+id/matpel_icon_6"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
-                android:src="@drawable/ips"
                 app:layout_constraintBottom_toBottomOf="@+id/ips"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
