--- a/app/src/main/res/layout/activity_first_screen_pintar_plus.xml
+++ b/app/src/main/res/layout/activity_first_screen_pintar_plus.xml
@@ -24,8 +24,8 @@
         <ImageView
             android:layout_width="200dp"
             android:layout_height="200dp"
-            android:layout_marginTop="20dp"
-            />
+            android:src="@drawable/book_awal"
+            android:layout_marginTop="20dp" />
 
         <TextView
             android:layout_width="wrap_content"
