--- a/app/src/main/res/layout/activity_video_matpel.xml
+++ b/app/src/main/res/layout/activity_video_matpel.xml
@@ -6,7 +6,7 @@
     android:background="@color/white"
     tools:context="id.our.pintarplus.VideoMatpelActivity">
 
-    <!-- Toolbar or Header -->
+    <!-- Toolbar atau Header -->
     <LinearLayout
         android:id="@+id/header"
         android:layout_width="match_parent"
@@ -23,8 +23,7 @@
             android:layout_width="24dp"
             android:layout_height="24dp"
             android:src="@drawable/ic_back"
-            android:contentDescription="Back button"
-            />
+            android:contentDescription="Back button" />
 
         <TextView
             android:id="@+id/header_title"
@@ -37,7 +36,7 @@
             android:textStyle="bold" />
     </LinearLayout>
 
-    <!-- RecyclerView for Video List -->
+    <!-- RecyclerView untuk daftar video -->
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_videos"
         android:layout_width="match_parent"
@@ -47,10 +46,9 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/header"
-        app:layout_constraintVertical_bias="1.0"
         tools:listitem="@layout/item_video" />
 
-    <!-- Video Player Container -->
+    <!-- Kontainer pemutar video -->
     <FrameLayout
         android:id="@+id/video_container"
         android:layout_width="match_parent"
@@ -66,4 +64,5 @@
             android:layout_height="match_parent"
             android:visibility="gone" />
     </FrameLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
